--- a/아이디어톤/writing/w-style.css
+++ b/아이디어톤/writing/w-style.css
@@ -1,18 +1,3 @@
-@font-face{
-    font-family : 'Poppins-Black';
-    src: url('./font/Poppins-Black.woff') format('woff');
-}
-
-@font-face{
-    font-family: 'SCDream8';
-    src: url('./font/SCDream8.woff') format('woff');
-}
-
-@font-face{
-    font-family: 'SCDream4';
-    src: url('./font/SCDream4.woff') format('woff');
-}
-
 html{
     font-size: 62.5%;
     /* 16px=1.6rem; */
@@ -20,55 +5,115 @@ html{
 
 body{
     background-color: #000000;
+    /* width: 100vw;
+    height: 86.1111vw; */
+    flex-grow: 0;
+    padding: 2.7778vw 21.5278vw 5.5556vw ;
+    left: fixed;
+    right: fixed;
 }
 
 
-/* 상단 로고 및 임시 등록, 등록 버튼 부분  */
-#savingButton{
-    border-radius: 3.35rem;
-    border: solid 0.2rem #ffffff;
-    font-family: 'SCDream8';
-    font-size: 2rem;
-    color: #ffffff;
-
-}
-
-
-.head-s-c{
-    display: flex;
-}
-
-.logo{
-    font-family: 'Poppins-Black';
-    color: #ffffff;
-    font-size: 2rem;
-}
 
 /*'오늘의 색', '스티커', '이미지 첨부' 메뉴 부분*/
+.decoBox{
+    display: flex;
+    padding: 0 23.3333vw 0 0;
+    position: relative;
+}
+
 .colorBox{
     display: flex;
+    padding: 0.3vw 0.6vw;
+    justify-content: center;
+    align-items: center;
+}
+
+.colorBox-text{
+    white-space: nowrap;
 }
 
 .stickerBox{
     display: flex;
+    padding: 0.3vw 0.5vw;
+    justify-content: center;
+    align-items: center;
+
+    /* 메뉴 버튼 겹치게  */
+    position: absolute;
+    left: 11.8vw;
+    
 }
 
 .imageBox{
     display: flex;
+    padding: 0.3vw 0.5vw;
+    justify-content: center;
+    align-items: center;
+
+     /* 메뉴 버튼 겹치게  */
+    position: absolute;
+    left: 24vw;
 }
 
+#Box{
+    background-color: #ffffff;
+    /* width: 11.8056vw; */
+    /* width: 13vw; */
+
+    width: 12vw;
+    height: 3.1250vw;
+    border: solid 0.0694vw #000;
+    border-top-left-radius: 2vw;
+    border-top-right-radius: 2vw;
+
+}
+
+
 #BoxText{
-    color: #fff;
-    font-family: 'SCDream4';
+    color: #000000;
+    font-family: 'Poppins-Bold';
+
+    width: 3.7500vw;
+    height: 1.6667vw;
+    margin: 0 0.6944vw 0 0;
+    font-size: 1.1111vw;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+
+    /* text-align: left; */
+}
+
+.colorBox-color{
+    width: 1vw;
+    height: 1vw;
+    border: #000000;
+    background-color: #000000;
+    margin: 0 0 0 25px;
+}
+
+.stickerBox-sticker{
+    width: 1.3889vw;
+    height: 1.3889vw;
+    /* margin: 0.1389vw 0 0.1389vw 0.6944vw; */
+}
+.imageBox-image{
+    width: 1.0972vw;
+    height: 1.0972vw;
 }
 
 /* 글쓰기 부분 */
-.textbox{
-    background-color: #ffffff;
-    border: solid 0.2rem #000;
 
-    width: 1180px;
-    height: 866px;
-    margin: 112px 0 0;
-    padding: 0 140px 564px 79px;
+.textBox{
+    /* width: 56.9444vw; */
+    height: 64.2361vw;
+    /* margin: 11.0417vw 0 0; */
+    padding: 2.6389vw 2.9167vw 1.5972vw 0.9722vw;
+    border: solid 0.0694vw #000;
+    background-color: white;
+
+
+
 }
