--- a/아이디어톤/writing/css/w-tab.css
+++ b/아이디어톤/writing/css/w-tab.css
@@ -3,13 +3,124 @@
     position: relative;
 }
 
-#TabBar{
+.TabBar{
     position: absolute;
+    width: 31.25vw;
+    height: 100vh;
+    right: 4.5vw;
+    top: -14vw;
+    background-color: #2c2c2c;
+    padding: 1.5vw 0 10vw 0;
 
-    width: 31.2500vw;
-    height: 91.5531vh;
+    animation: fadein 2s;
+    -webkit-animation: fadein 2s;
 
-
-    background-color: #ffffff;
 }
 
+#color-bar{
+    /* visibility: visible; */
+    visibility: hidden;
+    z-index: 0;
+}
+
+#sticker-bar{
+    visibility: hidden;
+    z-index: 0;
+}
+
+#image-bar{
+    visibility: hidden;
+    z-index: 0;
+}
+
+/* 탭 속 텍스트 */
+#tab-bar-text{
+    font-family: 'SCDream4';
+    color: #ffffff;
+    /* margin: 0.8854vw 10.2083vw 2.6563vw 0; */
+    margin: 1vw 0 1vw 3vw;
+    font-size: 1.5vw;
+}
+
+
+/* 팔레트 css */
+.active{
+    outline: 1px solid black;
+}
+
+/* 컨테이너 */
+.color-bar-palette{
+    display: flex;
+    justify-content: center;
+    padding: 0 3vw;
+    flex-wrap: wrap;
+
+    animation: fadein 2s;
+    -webkit-animation: fadein 2s;
+
+    /* animation: fadeout 1.7s;
+    -webkit-animation: fadeout 1.7s;  */
+}
+
+/* 아이템- 각 팔레트 */
+.paletteIndv{
+    width: 2.7vw;
+    height: 2.7vw;
+    margin: 0.5vw -0.5vw 1vw 0;
+    cursor: pointer;
+    border-radius: 50%;
+    border: solid 0.1vw #000;
+}
+
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+
+@-webkit-keyframes fadein { 
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+
+/* @keyframes fadeout {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes fadeout { 
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+} */
+
+#tab-bar-header{
+    display: flex;
+
+    justify-content: space-between;
+
+}
+
+#closeButton{
+    color: #ffffff;
+    font-weight: 500;
+
+    margin: 0 2vw 0 0;
+
+
+}
